--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   flutter_launcher_icons: ^0.11.0
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/icons/icon.png
-  #   - images/a_dot_ham.jpeg
+   - assets/gifs/loadingdots.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
