Added more categories to preferences

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,9 @@ flutter:
    - assets/misc/content/historical_figures.txt
    - assets/misc/content/marketing_campaigns.txt
    - assets/misc/content/political_figures.txt
+   - assets/misc/content/applications.txt
+   - assets/misc/content/programming.txt
+   - assets/misc/content/crimes.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
